// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers should handle TODO_REQUEST 1`] = `
Object {
  "results": undefined,
  "search": "Search...(state)",
  "selected": Object {},
}
`;

exports[`reducers should return the initial state 1`] = `
Object {
  "results": Array [],
  "search": "Search...(state)",
  "selected": Object {},
}
`;
